# aoc2022-hs

./: .gitignore  LICENSE  README.md  aoc2020-hs.cabal  hie.yaml  stack.yaml
src/: Day1.hs  Day10.hs  Day17.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs  tmp.hs
src/input/: Day1.txt  Day6.txt
