name:                aoc2020-hs
version:             0.1.0.0
synopsis:            Advent of Code 2020 (Haskell)
-- description:
homepage:            https://github.com/githubuser/aoc2020-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Naveen
maintainer:          naveen@example.com
copyright:           2023 Naveen
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aoc2020-hs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Day1 Day2 Day3 Day4 Day5 Day6 Day7 Day8 Day9 Day10
                       Day17
  build-depends:       base
                     , containers
                     , unordered-containers
                     , array
                     , vector
